[package]
name = "wasm-bundle"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.69"
js-sys = "0.3.46"
parse-display = "0.4"

[dependencies.web-sys]
version = "0.3.46"
features = [
    "Attr",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "ImageData",
    "Text",
    "Window"
]